<resources>
    <string name="app_name">A8Project</string>
    <string name="game_name">Crazy Ball</string>
    <string name="start_play_button">Start Play</string>
    <string name="high_score_button">High Score</string>
    <string name="author">Author: Jiaming Zhang</string>
    <string name="thanks">Thanks: Rufus Zhu</string>

    <string name="play_again">Play Again</string>
    <string name="main_menu">Main Menu</string>
</resources>
