<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.a17255.a8project.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_name"
        android:textSize="70sp"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19"
        android:layout_marginTop="92dp"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/start_play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_play_button"
        tools:layout_editor_absoluteY="270dp"
        tools:layout_editor_absoluteX="148dp"
        android:layout_marginBottom="40dp"
        android:layout_above="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/high_score_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:text="@string/high_score_button"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="270dp"
        android:layout_above="@+id/start_play_button"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/author"
        android:textStyle="italic"
        android:layout_marginBottom="54dp"
        android:id="@+id/textView2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/thanks"
        android:textStyle="italic"
        android:layout_marginBottom="22dp"
        android:id="@+id/textView4"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
