<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.a17255.a8project.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high_score_button"
        android:textSize="70sp"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19"
        android:id="@+id/textView"
        android:layout_above="@+id/listView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp" />

    <Button
        android:id="@+id/play_again_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_again"
        tools:layout_editor_absoluteY="270dp"
        tools:layout_editor_absoluteX="148dp"
        android:layout_above="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginBottom="12dp" />

    <Button
        android:id="@+id/main_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_menu"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="270dp"
        android:layout_alignBaseline="@+id/play_again_button"
        android:layout_alignBottom="@+id/play_again_button"
        android:layout_alignEnd="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/author"
        android:textStyle="italic"
        android:layout_marginBottom="33dp"
        android:id="@+id/textView2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/colorAccent"
        android:id="@+id/listView"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>